[package]
name = "pcs_final"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"
lazy_static = "1.4.0"
sha3 = "0.11.0-pre.3"
crypto-bigint = "0.5.5"
#uncomment this if you want to build gmp from scratch. It takes an ungodly amount of time on my computer.
gmp-mpfr-sys = { version = "1.6.2", features=["use-system-libs"]}
rug = { version = "1.24.1", default-features = false, features = ["float", "integer"]}
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
